<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingTop="65dp"
    >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtfirstName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtpassword"
        />
    <Button
        android:id="@+id/enter"
        android:layout_width="match_parent"
        android:text="@string/txtLogin"
        android:onClick="login"
        android:background="@color/material_red_500"
        android:layout_height="wrap_content"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:text="Dont have an account? Signup"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCreateAccount"
        android:onClick="create_account"
        android:background="@color/material_red_500"
        />
</LinearLayout>
